--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
             <div class="nav__right">
             <%= "こんにちは#{current_user.name}さん" %>
               <%= link_to "ログアウト", destroy_user_session_path, class: :nav__logout, method: :delete %>
-              <%= link_to "New Proto", root_path, class: :nav__btn %>
+              <%= link_to "New Proto", new_prototype_path, class: :nav__btn %>
             </div>
           <%# // ログインしているときは上記を表示するようにしましょう %>
           <% else %>
