--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -7,8 +7,10 @@
       <%= link_to @prototype.user.name, root_path, class: :prototype__user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
         <div class="prototype__manage">
-          <%= link_to "編集する", root_path, class: :prototype__btn %>
-          <%= link_to "削除する", root_path, class: :prototype__btn %>
+          <% if user_signed_in? && current_user.id == @prototype.user_id %>
+            <%= link_to "編集する", root_path, class: :prototype__btn %>
+            <%= link_to "削除する", root_path, class: :prototype__btn %>
+          <% end %>
         </div>
       <%# // プロトタイプの投稿者とログインしているユーザーが同じであれば上記を表示する %>
       <div class="prototype__image">
